# kobuzapi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.specify/memory/: constitution.md
benches/: hot_paths.rs
metadata_tests/: flac_metadata_report.md  mp3_metadata_report.md
metadata_tests/metadata/flac/: Adele - Hello - FLAC - 28014963.txt  B.B. King - The Thrill Is Gone - FLAC - 52371130.txt  Bob Dylan - Like a Rolling Stone - FLAC - 15215741.txt  Bob Marley & The Wailers - Three Little Birds - FLAC - 52323780.txt  Buena Vista Social Club - Chan Chan - FLAC - 387387265.txt  Daft Punk - Around the World - FLAC - 1065482.txt  Donna Summer - I Feel Love - FLAC - 52482680.txt  Glenn Gould - Aria _ Sarabande - FLAC - 26890072.txt  Hans Zimmer - Time - FLAC - 2206801.txt  Herbie Hancock - Chameleon - FLAC - 37905.txt  Johnny Cash - Hurt - FLAC - 33839468.txt  Kendrick Lamar - BLOOD. - FLAC - 40128300.txt  Madonna - Like a Virgin - FLAC - 6004880.txt  (+7 more)
metadata_tests/reports/: Adele_Hello_FLAC_28014963_vs_Adele - Hello.txt  Adele_Hello_MP3_28014963_vs_Adele - Hello.txt  B.B. King_The Thrill Is Gone_FLAC_52371130_vs_B.B. King - The Thrill Is Gone.txt  B.B. King_The Thrill Is Gone_MP3_52371130_vs_B.B. King - The Thrill Is Gone.txt  Bob Dylan_Like a Rolling Stone_FLAC_15215741_vs_Bob Dylan - Like a Rolling Stone.txt  Bob Dylan_Like a Rolling Stone_MP3_15215741_vs_Bob Dylan - Like a Rolling Stone.txt  Bob Marley & The Wailers_Three Little Birds_FLAC_52323780_vs_Bob Marley & The Wailers - Three Little Birds.txt  Bob Marley & The Wailers_Three Little Birds_MP3_52323780_vs_Bob Marley & The Wailers - Three Little Birds.txt  Buena Vista Social Club_Chan Chan_FLAC_387387265_vs_Buena Vista Social Club - Chan Chan (Remastered 2021).txt  Buena Vista Social Club_Chan Chan_MP3_387387265_vs_Buena Vista Social Club - Chan Chan (Remastered 2021).txt  Daft Punk_Around the World_FLAC_1065482_vs_Daft Punk - Around the World.txt  Daft Punk_Around the World_MP3_1065482_vs_Daft Punk - Around the World.txt  Donna Summer_I Feel Love_FLAC_52482680_vs_Donna Summer - I Feel Love.txt  Donna Summer_I Feel Love_MP3_52482680_vs_Donna Summer - I Feel Love.txt  Glenn Gould_Aria _ Sarabande_FLAC_26890072_vs_Glenn Gould - Aria _ Sarabande (Remastered).txt  Glenn Gould_Aria _ Sarabande_MP3_26890072_vs_Glenn Gould - Aria _ Sarabande (Remastered).txt  Hans Zimmer_Time_FLAC_2206801_vs_Hans Zimmer - Time.txt  Hans Zimmer_Time_MP3_2206801_vs_Hans Zimmer - Time.txt  Herbie Hancock_Chameleon_FLAC_37905_vs_Herbie Hancock - Chameleon (Album Version).txt  Herbie Hancock_Chameleon_MP3_37905_vs_Herbie Hancock - Chameleon (Album Version).txt  Johnny Cash_Hurt_FLAC_33839468_vs_Johnny Cash - Hurt (Album Version).txt  Johnny Cash_Hurt_MP3_33839468_vs_Johnny Cash - Hurt (Album Version).txt  Kendrick Lamar_BLOOD._FLAC_40128300_vs_Kendrick Lamar - BLOOD.txt  Kendrick Lamar_BLOOD._MP3_40128300_vs_Kendrick Lamar - BLOOD.txt  Madonna_Like a Virgin_FLAC_6004880_vs_Madonna - Like a Virgin.txt  Madonna_Like a Virgin_MP3_6004880_vs_Madonna - Like a Virgin.txt  Metallica_Enter Sandman_FLAC_123452387_vs_Metallica - Enter Sandman (Remastered 2021).txt  Metallica_Enter Sandman_MP3_123452387_vs_Metallica - Enter Sandman (Remastered 2021).txt  Miles Davis_So What_FLAC_13176083_vs_Miles Davis - So What.txt  Miles Davis_So What_MP3_13176083_vs_Miles Davis - So What.txt  Nirvana_Smells Like Teen Spirit_FLAC_14158543_vs_Nirvana - Smells Like Teen Spirit (Album Version).txt  Nirvana_Smells Like Teen Spirit_MP3_14158543_vs_Nirvana - Smells Like Teen Spirit (Album Version).txt  Sex Pistols_Anarchy In The UK_FLAC_262708929_vs_Sex Pistols - Anarchy In The UK.txt  Sex Pistols_Anarchy In The UK_MP3_262708929_vs_Sex Pistols - Anarchy In The UK.txt  Stevie Wonder_Superstition_FLAC_16012386_vs_Stevie Wonder - Superstition (Album Version).txt  Stevie Wonder_Superstition_MP3_16012386_vs_Stevie Wonder - Superstition (Album Version).txt  The Beatles_Hey Jude_FLAC_235803319_vs_The Beatles - Hey Jude (Remastered 2015).txt  The Beatles_Hey Jude_MP3_235803319_vs_The Beatles - Hey Jude (Remastered 2015).txt
specs/001-qobuz-api-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: credentials.rs  errors.rs  lib.rs  main.rs  sanitize.rs  signing.rs
src/api/: auth.rs  favorites.rs  http_client.rs  macros.rs  mod.rs  requests.rs  response.rs  service.rs  service_download.rs  test_support.rs
src/api/content/: mod.rs  (+9 more)
src/credentials/: web.rs
src/metadata/: config.rs  embedder.rs  extractor.rs  mod.rs
src/models/: album.rs  artist.rs  credential.rs  deserialization.rs  file_url.rs  mod.rs  playlist.rs  search.rs  subscription.rs  track.rs
tests/integration/: auth_tests.rs  browse_tests.rs  common.rs  download_tests.rs  metadata_tests.rs  mock_http_client.rs  search_tests.rs
(+97 files in other folders)
