[package]
edition = "2024"
name = "qobuz-api-rust-refactor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
dotenvy = "0.15.7"
lofty = "0.23.3"
md-5 = "0.11.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["form", "json", "query", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[[test]]
name = "integration"
path = "tests/integration/mock_http_client.rs"

[lints.clippy]
# missing_asserts_for_indexing = "deny"
# unused_trait_names = "deny"
arbitrary-source-item-ordering = "deny"
as_ptr_cast_mut = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
equatable_if_let = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
imprecise_flops = "deny"
iter_with_drain = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
missing_assert_message = "deny"
missing_docs_in_private_items = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_raw_strings = "deny"
needless_type_cast = "deny"
option_if_let_else = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_use = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_feature_names = "deny"
redundant_pub_crate = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
significant_drop_tightening = "deny"
single_option_map = "deny"
string_lit_chars_any = "deny"
suboptimal_flops = "deny"
tests_outside_test_module = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_struct_initialization = "deny"
unreachable = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
